fix repl dom double scroll

--- a/website/editor/src/styles.css
+++ b/website/editor/src/styles.css
@@ -103,7 +103,6 @@ body {
   border-left: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   background-color: #fff;
-  overflow: auto;
 }
 
 .dom iframe {
